--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="citation-embed">
-        <p class="citation-texte">"LChaque aventure RPG est une invitation à un voyage extraordinaire, où chaque quête, combat et découverte nous rapproche un peu plus de l'émerveillement”."</p>
+        <p class="citation-texte">"Chaque aventure RPG est une invitation à un voyage extraordinaire, où chaque quête, combat et découverte nous rapproche un peu plus de l'émerveillement”."</p>
         <p class="citation-auteur">- jRPGlibrary</p>
     </div>
 </body>
