--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
         }
         .citation-texte {
             font-style: italic;
-            color: black;
+            color: white;
             font-size: 18px;
             margin-bottom: 10px;
         }
         .citation-auteur {
             text-align: right;
-            color: black;
+            color: white;
             font-weight: bold;
         }
     </style>
 </head>
 <body>
     <div class="citation-embed">
-        <p class="citation-texte">"Chaque aventure RPG est une invitation à un voyage extraordinaire, où chaque quête, combat et découverte nous rapproche un peu plus de l'émerveillement”."</p>
+        <p class="citation-texte">"Chaque aventure RPG est une invitation à un voyage extraordinaire, 
+            où chaque quête, combat et découverte nous rapproche un peu plus de l'émerveillement”."</p>
         <p class="citation-auteur">- jRPGlibrary</p>
     </div>
 </body>
