--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             font-family: Arial, sans-serif;
         }
         .citation-texte {
+            display:flex;
+            align-items: center;
+            justify-content: center;
             font-style: italic;
             color: white;
             font-size: 18px;
