--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div id="rows-container"></div>
   <script src="script.js"></script>
+  <script src="gamesData.js"></script>
 </body>
 
 </html>
