--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>BackLOG JV</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
   <div id="rows-container"></div>
-  <script src="script.js"></script>
-  <script src="gamesData.js"></script>
+  <script src="/games.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
