--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div id="rows-container"></div>
+   <script src="src/utils/gamesData.js"></script>
   <script src="src/utils/script.js"></script>
 </body>
 
